# data_pragyan

./: .env.example  .gitignore  .pre-commit-config.yaml  DOCKER_DEPLOYMENT.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  setup.sh
.github/workflows/: ci-cd.yml
docs/images/: README.md
scripts/: backup.sh  capture_screenshots.sh  deploy.sh
sql/: additional_tables.sql  init.sql  insert_data.sql
src/: __init__.py  app.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  connection.py
src/ui/: components.py
src/utils/: __init__.py  llm_processor.py  parsers.py  schema_manager.py
tests/: __init__.py  test_database.py  test_llm_processor.py  test_parsers.py
